--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,8 @@
+.search-row {
+  background-color: rgba(30, 30, 240, 0.8);
+  padding: 1rem;
+}
+
 /* Page Background Gradient */
 .bg-gradient-img {
   width: 100%;
@@ -9,6 +14,11 @@
 .player-card {
   display: inline-block;
   border: 1px solid black;
+  margin: .5rem;
+}
+
+.cards-bg-stack-opacity {
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 .song-box {
@@ -34,7 +44,7 @@
 .bg-image-centered {
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("../images/SomeFileNameGoesHere.jpg");
+  background-image: url("../images/football-field-background-10019.jpg");
 }
 
 img {
