--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -1,4 +1,8 @@
+.search-row
+  background-color: rgba(30, 30, 240, .8)
+  padding: 1rem
 
+  
 
 
 /* Page Background Gradient
@@ -13,6 +17,10 @@
 .player-card
     display: inline-block
     border: 1px solid black
+    margin: .5rem
+
+.cards-bg-stack-opacity
+    background-color: rgba(255, 255, 255, .6)
 
 .song-box
   background-color: rgba(255, 255, 255, .3)
@@ -35,7 +43,8 @@
 .bg-image-centered 
     background-repeat: no-repeat
     background-position: center
-    background-image: url("../images/SomeFileNameGoesHere.jpg")
+    background-image: url("../images/football-field-background-10019.jpg")
+  
 
 img 
     width: 200px
