commit with cleaning for turn in

--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -1,9 +1,10 @@
 .search-row
-  background-color: rgba(30, 30, 240, .8)
+  background-color: rgba(213, 10, 10, .8)
   padding: 1rem
-
+  text-align: center
   
-
+.search-form-pad
+  padding: .5rem
 
 /* Page Background Gradient
 
@@ -20,7 +21,20 @@
     margin: .5rem
 
 .cards-bg-stack-opacity
-    background-color: rgba(255, 255, 255, .6)
+  background-color: rgba(1, 51, 105, .7)
+  text-align: center
+
+.cards-bg-green-stack-opacity
+  background-color: rgba(64, 119, 7, .7)
+  text-align: center
+
+.cards-header-color
+  color: white 
+  background-color: rgba(255, 255, 255, .6)
+  
+
+.cards-list-type
+  color:rgba(10, 10, 10, .9)
 
 .song-box
   background-color: rgba(255, 255, 255, .3)
@@ -41,7 +55,7 @@
 /* Image helpers
 
 .bg-image-centered 
-    background-repeat: no-repeat
+    background-repeat: 
     background-position: center
     background-image: url("../images/football-field-background-10019.jpg")
   
@@ -94,6 +108,12 @@ img
   height: 500px
 
 /* padding helpers
+
+.pd-hlf-rem
+  padding: .5rem
+
+.pd-1rem
+  padding: 1rem
 
 .pd-1rem
   padding: 1rem
