--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,11 @@
 .search-row {
-  background-color: rgba(30, 30, 240, 0.8);
+  background-color: rgba(213, 10, 10, 0.8);
   padding: 1rem;
+  text-align: center;
+}
+
+.search-form-pad {
+  padding: .5rem;
 }
 
 /* Page Background Gradient */
@@ -18,6 +23,17 @@
 }
 
 .cards-bg-stack-opacity {
+  background-color: rgba(1, 51, 105, 0.7);
+  text-align: center;
+}
+
+.cards-bg-green-stack-opacity {
+  background-color: rgba(64, 119, 7, 0.7);
+  text-align: center;
+}
+
+.cards-header-color {
+  color: white;
   background-color: rgba(255, 255, 255, 0.6);
 }
 
@@ -42,7 +58,6 @@
 
 /* Image helpers */
 .bg-image-centered {
-  background-repeat: no-repeat;
   background-position: center;
   background-image: url("../images/football-field-background-10019.jpg");
 }
@@ -98,6 +113,14 @@ img {
 }
 
 /* padding helpers */
+.pd-hlf-rem {
+  padding: .5rem;
+}
+
+.pd-1rem {
+  padding: 1rem;
+}
+
 .pd-1rem {
   padding: 1rem;
 }
