--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -17,7 +17,7 @@
 
 .player-card
     display: inline-block
-    border: 1px solid black
+    border: 1px solid rgba(200, 200, 200, .5)
     margin: .5rem
 
 .cards-bg-stack-opacity
