--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,7 +18,7 @@
 /* Card helpers */
 .player-card {
   display: inline-block;
-  border: 1px solid black;
+  border: 1px solid rgba(200, 200, 200, 0.5);
   margin: .5rem;
 }
 
