adjust opacity on playercard background

--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -17,8 +17,9 @@
 
 .player-card
     display: inline-block
-    border: 1px solid rgba(200, 200, 200, .5)
+    border: 1px solid rgba(200, 200, 200, .3)
     margin: .5rem
+    background-color: rgba(200, 200, 200, .6)
 
 .cards-bg-stack-opacity
   background-color: rgba(1, 51, 105, .7)
