--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,8 +18,9 @@
 /* Card helpers */
 .player-card {
   display: inline-block;
-  border: 1px solid rgba(200, 200, 200, 0.5);
+  border: 1px solid rgba(200, 200, 200, 0.3);
   margin: .5rem;
+  background-color: rgba(200, 200, 200, 0.6);
 }
 
 .cards-bg-stack-opacity {
